fixed z-index.

--- a/app/static/css/node.css
+++ b/app/static/css/node.css
@@ -252,7 +252,7 @@ input[type='range']::-webkit-slider-thumb {
 #help-icon {
     font-size: 2.4em;
     margin-right: 2.5rem;
-    margin-top: 4rem;
+    margin-top: 4.2rem;
     cursor: pointer;
     color: #fff;
     float: right;
@@ -266,7 +266,7 @@ input[type='range']::-webkit-slider-thumb {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     left: 0;
     background-color: #111;
